# linux-video-rs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
async-std/: Cargo.toml  README.md
async-std/src/: lib.rs
async-std/tests/: capture.rs  output.rs
cli/: Cargo.toml
cli/src/: args.rs  main.rs
core/: Cargo.toml  README.md
core/src/: calls.rs  ctrlid.rs  extras.rs  impls.rs  lib.rs  macros.rs  private.rs  safe_ref.rs  stdid.rs  structs.rs  traits.rs  types.rs  utils.rs
core/src/extras/: dcv_color_primitives_ops.rs  drm_fourcc_ops.rs
core/src/impls/: buffer.rs  capability.rs  control.rs  controls.rs  events.rs  format.rs  formats.rs  frmivals.rs  frmsizes.rs  streamparm.rs  timestamp.rs  types.rs
core/src/private/: helpers.rs  internals.rs  traits.rs
core/src/types/: consts.rs  ctrlid.rs  enums.rs  fourcc.rs  structs.rs
examples/: capture.rs  controls.rs  formats.rs  info.rs  list.rs
src/: lib.rs
tests/: capture.rs  output.rs
tokio/: Cargo.toml  README.md
tokio/src/: lib.rs
tokio/tests/: capture.rs  output.rs
