[package]
name = "linux-video"
description = "Linux V4L2 device interfacing"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["v4l", "v4l2", "video", "linux", "ioctl"]
edition = "2021"

[workspace]
members = ["core", "tokio", "cli"]

[dependencies.linux-video-core]
path = "core"
version = "0.1.0"
default-features = false

[dev-dependencies.image]
version = "0.24"

[features]
default = []
clap = ["linux-video-core/clap"]
serde = ["linux-video-core/serde"]
test-vivid = []
