[package]
name = "linux-video-cli"
description = "Linux video device interfacing (utils)"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["v4l", "v4l2", "video", "linux", "ioctl"]
edition = "2021"
publish = false

[[bin]]
name = "video-cli"
path = "src/main.rs"

[dependencies.linux-video]
path = ".."
version = "0.1.0"
default-features = false
features = ["clap"]

[dependencies.clap]
version = "4"
features = ["std", "derive"]
